samples/_failures_safe/1761473816_b95f4b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_db76c00f.c: In function ‘main’:
./samples/SAFE/__tmp_db76c00f.c:166:5: error: expected declaration or statement at end of input
  166 |     graph.edges[4].dest = 4;
      |     ^~~~~
